[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/GeneralDialogUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://SnowMode/EndingUI.gd" type="Script" id=2]

[node name="GeneralDialogUI" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Dialog" parent="." index="4"]
margin_left = -320.0
margin_right = 320.0

[node name="AnimationPlayer" parent="." index="7"]
reset_on_save = false

[node name="ItemAnimator" parent="." index="8"]
reset_on_save = false

[node name="HighScores" type="Control" parent="." index="9"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -30.0
margin_right = 89.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="HighScores" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HighScores/HBoxContainer" index="0"]
margin_left = 6.0
margin_right = 64.0
margin_bottom = 66.0
custom_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="HighScores/HBoxContainer/VBoxContainer" index="0"]
margin_top = 7.0
margin_right = 58.0
margin_bottom = 19.0
text = "Alo"

[node name="Label2" type="Label" parent="HighScores/HBoxContainer/VBoxContainer" index="1"]
margin_top = 27.0
margin_right = 58.0
margin_bottom = 39.0
text = "Xcy"

[node name="Label3" type="Label" parent="HighScores/HBoxContainer/VBoxContainer" index="2"]
margin_top = 47.0
margin_right = 58.0
margin_bottom = 59.0
text = "Snow"

[node name="VBoxContainer2" type="VBoxContainer" parent="HighScores/HBoxContainer" index="1"]
margin_left = 80.0
margin_right = 172.0
margin_bottom = 66.0
custom_constants/separation = 8
alignment = 1

[node name="AloScore" type="Label" parent="HighScores/HBoxContainer/VBoxContainer2" index="0"]
margin_top = 7.0
margin_right = 92.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0, 0.929412, 1 )
text = "000 sec"

[node name="XcyScore" type="Label" parent="HighScores/HBoxContainer/VBoxContainer2" index="1"]
margin_top = 27.0
margin_right = 92.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 0, 0.929412, 1 )
text = "000 sec"

[node name="SnowScore" type="Label" parent="HighScores/HBoxContainer/VBoxContainer2" index="2"]
margin_top = 47.0
margin_right = 92.0
margin_bottom = 59.0
custom_colors/font_color = Color( 1, 0, 0.929412, 1 )
text = "000 sec"
